[gd_scene load_steps=5 format=3 uid="uid://0v5sd78clnep"]

[ext_resource type="Script" uid="uid://chriv0ujt11m6" path="res://scripts/Enemy.gd" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://5mmuguian2wo" path="res://scenes/temp scenes/temp_enemy.tscn" id="2_md0e3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_md0e3"]
radius = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_4ra3w"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_7p1mj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_md0e3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="TempEnemy" parent="." instance=ExtResource("2_md0e3")]

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.7, 0)
collision_layer = 2
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("SphereShape3D_4ra3w")

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_exited"]
